created quotes section, fulfilled client request

--- a/src/assets/sass/_utils.scss
+++ b/src/assets/sass/_utils.scss
@@ -9,3 +9,11 @@
     padding-top: 300px;
     padding-bottom: 300px
 }
+
+.font-size-24 {
+    font-size: 24px;
+}
+
+.font-size-18 {
+    font-size: 18px;
+}
