--- a/src/assets/sass/_vars.scss
+++ b/src/assets/sass/_vars.scss
@@ -7,7 +7,7 @@ $bgc-2: #FFFFFF59;
 $bgc-3: #F9F9F9;
 $bgc-4: #F5F5F5;
 $bgc-5: #E5E3DF;
-$bgc-6: #00D9A6;
+$bgc-6: #D2405D;
 $bgc-7: #BBBBBB;
 $bgc-8: #527CEB;
 $bgc-9: #70707059;
@@ -27,7 +27,7 @@ $tc-5: #FFFFFFB3;
 $tc-6: #FFFFFF99;
 $tc-7: #FFFFFF80;
 $tc-8: #F9F9F9;
-$tc-9: #00D9A6;
+$tc-9: #D2405D;
 $tc-10: #AAAAAA;
 $tc-11: #1BB0CE;
 $tc-12: #888888;
